<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blinkit_yellow"
    tools:context=".auth.SplashFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="-0.06"
                android:scaleX="1.2"
                android:text="@string/text_blink"
                android:textColor="@color/black"
                android:textSize="70sp"
                android:textStyle="bold"
                android:paddingHorizontal="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="-0.04"
                android:scaleX="1.2"
                android:text="@string/text_it"
                android:textColor="@color/blinkit_green"
                android:textSize="70sp"
                android:textStyle="bold"
                android:paddingHorizontal="4dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blinkit_tagline"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:scaleX="1.24"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gold"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parent_company"
            android:textSize="11sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:scaleX="1.1"
            android:letterSpacing="0.08"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>