<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_signin_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/fade_gradient"
                android:scaleType="centerCrop"
                android:src="@drawable/banner_signin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/ll_signin_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/iv_signin_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/blinkit_logo"
                    android:scaleType="centerCrop"
                    android:background="@drawable/round_corner"
                    android:clipToOutline="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:scaleX="1.2"
                    android:text="@string/blinkit_tagline"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scaleX="1.1"
                    android:text="@string/login_signup_text"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/custom_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/round_corner_border"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:text="@string/country_code"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enter_mobile_number_text"
                        android:inputType="phone"
                        android:letterSpacing="0.1"
                        android:maxLength="10"
                        android:paddingStart="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/blinkit_grey"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_button_fill"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:text="@string/continue_btn_text"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/terms_agreement_text"
                    android:textSize="10sp"
                    android:textColor="@color/blinkit_grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/light_grey"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_signin_form">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_agreement_text"
                    android:textSize="10sp"
                    android:textColor="@color/blinkit_grey"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>